# bitlocker-forensic

./: .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_metadata.rs
core/src/: bytes.rs  crypto.rs  error.rs  guid.rs  header.rs  lib.rs  metadata.rs  method.rs  vfs.rs  volume.rs
core/tests/: oracle_bdetogo.rs  oracle_bitlocker1.rs  oracle_clearkey.rs  oracle_m8003.rs  oracle_m8004.rs  oracle_m8005.rs  oracle_startupkey.rs  oracle_vault.rs  oracle_vfs_bdetogo.rs
core/tests/common/: mod.rs
docs/: PRD.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-reader-analyzer-two-crate-split.md  0002-from-scratch-audited-crypto.md  0003-panic-free-fuzzed-forbid-unsafe.md  0004-optional-forensic-vfs-encryption-layer.md  0005-axis-method-decode-refuse-unvalidated.md  0006-on-disk-format-variant-detection.md  0007-low-msrv-floor-and-release-plz.md
forensic/: Cargo.toml
forensic/src/: lib.rs  tests.rs
supply-chain/: config.toml
tests/data/: README.md
tests/oracle/: README.md
