[workspace]
resolver = "2"
members = ["core", "forensic"]

# ---------------------------------------------------------------------------
# Shared package fields (DRY): bump version / MSRV / license here once;
# members inherit via `field.workspace = true`.
# ---------------------------------------------------------------------------
[workspace.package]
version      = "0.3.3"
edition      = "2021"
rust-version = "1.81"
license      = "Apache-2.0"
authors      = ["Albert Hui <albert@securityronin.com>"]
repository   = "https://github.com/SecurityRonin/bitlocker-forensic"

# ---------------------------------------------------------------------------
# Single source of truth for dependency versions shared by 2+ members.
# ---------------------------------------------------------------------------
[workspace.dependencies]
thiserror = "2"
# Crypto — NEVER hand-rolled: audited RustCrypto crates for every primitive.
aes  = "0.8"
cbc  = "0.1"
ccm  = "0.5"
sha2 = "0.10"
# XTS-AES sector mode (methods 0x8004/0x8005). 0.5.x tracks cipher 0.4 / aes 0.8;
# 0.6+ jumps to cipher 0.5 / aes 0.9, incompatible with our stack.
xts-mode = "0.5"
# The one exception (no ecosystem crate exists): our own Elephant Diffuser,
# extracted from this repo's crypto layer and validated in situ by the Tier-1 oracle.
elephant-diffuser = "0.1"
# REUSE, don't reinvent calendar math: jiff renders FILETIME as RFC 3339.
jiff = "0.2"
bitlocker = { version = "0.3", path = "core", package = "bitlocker-core" }
forensicnomicon = { version = "1", features = ["std"] }

# ---------------------------------------------------------------------------
# Paranoid Gatekeeper: these crates parse untrusted, attacker-controllable
# BitLocker volumes. Never panic, never read out of bounds, never trust a
# length. Tests opt out via `#![cfg_attr(test, allow(clippy::unwrap_used,
# clippy::expect_used))]`.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn",  priority = -1 }
pedantic                 = { level = "warn",  priority = -1 }
correctness              = { level = "deny",  priority = -1 }
suspicious               = { level = "deny",  priority = -1 }
unwrap_used              = { level = "deny",  priority = 0  }
expect_used              = { level = "deny",  priority = 0  }
module_name_repetitions  = { level = "allow", priority = 1  }
must_use_candidate       = { level = "allow", priority = 1  }
missing_errors_doc       = { level = "allow", priority = 1  }
missing_panics_doc       = { level = "allow", priority = 1  }
cast_possible_truncation = { level = "allow", priority = 1  }
cast_possible_wrap       = { level = "allow", priority = 1  }
cast_sign_loss           = { level = "allow", priority = 1  }
cast_precision_loss      = { level = "allow", priority = 1  }
too_many_lines           = { level = "allow", priority = 1  }
items_after_statements   = { level = "allow", priority = 1  }
similar_names            = { level = "allow", priority = 1  }
manual_let_else          = { level = "allow", priority = 1  }

[profile.release]
lto           = "thin"
codegen-units = 1
