[package]
name         = "bitlocker-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description  = "From-scratch reader/decryptor for BitLocker Drive Encryption (BDE) volumes — password unlock, AES-CBC + Elephant Diffuser"
keywords     = ["forensics", "bitlocker", "encryption", "dfir", "windows"]
categories   = ["parser-implementations", "cryptography"]
readme       = "../README.md"
exclude      = ["/fuzz", "/.github", "/docs"]

[lib]
name = "bitlocker"

[features]
default = []
# forensic-vfs CryptoLayer contract (optional): present a BitLocker-encrypted
# volume as a decrypted ImageSource. Behind the `vfs` feature so the bare reader
# does not inherit the VFS dependency graph (ADR 0004). The decryption itself is
# bitlocker-core's (audited RustCrypto + the elephant-diffuser crate); this only
# wires the contract.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
aes  = { workspace = true }
cbc  = { workspace = true }
ccm  = { workspace = true }
sha2 = { workspace = true }
xts-mode = { workspace = true }
elephant-diffuser = { workspace = true }
forensic-vfs = { version = "0.1", optional = true }

[dev-dependencies]
# Tier-1 oracle: hash decrypted sectors of the real dfvfs bdetogo.raw image and
# compare to pybde ground truth (see tests/oracle_bdetogo.rs, env-gated on
# BDE_ORACLE_IMAGE). RustCrypto SHA-256.
sha2 = { workspace = true }

[lints]
workspace = true
